# fusible-economic-benchmark

./: .gitignore  LICENSE  README.md  pyproject.toml
configs/: example_finance_public.json  finance_values.csv  medicine_values.csv  openai_daytona_legal_hard_3tasks_3x.json  openai_daytona_legal_hard_3tasks_3x_medium.json  openai_daytona_legal_hard_3tasks_3x_xhigh_20260401.json  openai_daytona_legal_hard_3tasks_3x_xhigh_localworkspace_20260401.json  openai_daytona_legal_hard_3tasks_3x_xhigh_localworkspace_v2_20260401.json  openai_daytona_legal_next10_3x_xhigh_20260406.json  openai_daytona_legal_next3_3x_medium_20260401.json  openai_daytona_legal_next3_3x_xhigh_20260401.json  openai_daytona_legal_remaining9_3x_xhigh_20260407.json  openai_daytona_legal_task1041_1x_xhigh_readbest_v5_20260401.json  openai_daytona_legal_task1041_3x_medium_localworkspace_v3_20260401.json  openai_daytona_legal_task1041_3x_xhigh_localworkspace_v2_20260401.json  openai_daytona_legal_task1041_3x_xhigh_localworkspace_v3_20260401.json  openai_daytona_legal_task1041_3x_xhigh_localworkspace_v4_no_python_20260401.json  openai_daytona_legal_task1230_3x_medium_localworkspace_v3_20260401.json  openai_daytona_legal_task1230_3x_xhigh_localworkspace_v2_20260401.json  openai_daytona_legal_task13_1x.json  openai_daytona_legal_task13_1x_medium.json  openai_daytona_legal_task13_3x_medium_localworkspace_v3_20260401.json  openai_daytona_legal_task13_3x_xhigh_localworkspace_v2_20260401.json  openai_daytona_medicine_hard_5tasks_3x_medium_20260402.json  openai_daytona_medicine_hard_5tasks_3x_xhigh_20260402.json  (+11 more)
(+56 files in other folders)
